--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -253,8 +253,9 @@
 @agate-input-margin: @agate-input-decorator-focus-border-width (@agate-spotlight-outset / 2);
 @agate-input-opacity: inherit;
 @agate-input-padding: 21px 32px;
-@agate-input-icon-before-display: inherit;
-@agate-input-icon-before-align: inherit;
+@agate-input-icon-display: inherit;
+@agate-input-icon-align: inherit;
+@agate-input-icon-after-padding: inherit;
 @agate-input-icon-before-padding: inherit;
 @agate-input-icon-before-margin: 0 0 0 (@agate-spotlight-outset / 2);
 @agate-input-icon-after-margin: 0 (@agate-spotlight-outset / 2) 0 0;
