--- a/styles/variables-gallium.less
+++ b/styles/variables-gallium.less
@@ -60,6 +60,11 @@
 @agate-icon-small-size: 28px;
 @agate-icon-smallest-size: 18px;
 
+// Input
+// ---------------------------------------
+@agate-input-icon-display: flex;
+@agate-input-icon-align: center;
+
 // Item
 // ---------------------------------------
 @agate-item-font-size: 40px;
