--- a/styles/variables-silicon.less
+++ b/styles/variables-silicon.less
@@ -95,9 +95,10 @@
 @agate-input-font-size: 28px;
 @agate-input-height: 33px;
 @agate-input-opacity: 0.5;
-@agate-input-icon-before-display: flex;
-@agate-input-icon-before-align: center;
-@agate-input-padding: 21px 32px 21px 0px;
+@agate-input-icon-display: flex;
+@agate-input-icon-align: center;
+@agate-input-padding: 21px 32px 21px 0;
+@agate-input-icon-after-padding: 21px 21px 21px 9px;
 @agate-input-icon-before-padding: 21px 9px 21px 21px;
 @agate-input-text-align: left;
 
